--- a/styles/pages/contato.css
+++ b/styles/pages/contato.css
@@ -49,6 +49,7 @@
 .main-home{
     width: 100%;
     padding: 2rem;
+    display: none;
 }
 
 .main-home h2{
@@ -85,6 +86,7 @@
 
 .main-form{
     z-index: 999;
+    margin-top: 3rem;
 }
 
 .main-form h2{
