--- a/styles/pages/contato.css
+++ b/styles/pages/contato.css
@@ -3,6 +3,11 @@
 }
 
 /*-------------Hero-----------*/
+
+title{
+    display: none;
+}
+
 #hero{
     background-image: url("../../images/hero.jpeg");
     background-repeat: no-repeat;
