--- a/styles/pages/contato.css
+++ b/styles/pages/contato.css
@@ -139,24 +139,22 @@ title{
     height: 6rem;
 }
 
-.button-send{
-    margin-top: 1rem;
-}
-
-.button-send a{
+#button-form{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.button-send {
     background: #455A64;
     color: white;
     font-size: large;
     font-weight: 700;
+    width: 50%;
     padding: 1rem;
     border-radius: 10px;
-}
-
-.button-send a:link{
-    text-decoration: none;
+    border-style: none;
+    margin-top: 1rem;
 }
 
 /*-------------Form-infos-----------*/
@@ -238,7 +236,7 @@ title{
     }
 
     .form{
-        width: 300px !important;
+        margin-left: -2.5rem !important;
     }
 
     .bg-content{
@@ -301,8 +299,8 @@ title{
     }
   
     .form{
-        margin-left: -1.5rem;
-        width: 110% !important;
+        margin-left: -3.5rem;
+        width: 130% !important;
     }
 
     .form-infos{
