--- a/styles/pages/contato.css
+++ b/styles/pages/contato.css
@@ -22,7 +22,8 @@ title{
 #hero h2{
     color: white;
     margin-left: 2rem;
-    font-weight: 700;
+    margin-bottom: 1rem;
+    font-weight: 600;
 }
 
 .button{
@@ -252,7 +253,7 @@ title{
 @media (max-width: 575.98px)  {
 
     .button{
-        width: 30%;
+        width: 35%;
     }
 
     body{
@@ -386,7 +387,7 @@ title{
     }
 
     .button-wpp{
-        zoom: 0.8;
+        zoom: 1;
     }
 
     .footer-icons{
