--- a/styles/pages/diagnostica.css
+++ b/styles/pages/diagnostica.css
@@ -17,6 +17,7 @@ ul{
 
 .bg-main{
     display: flex;
+    display: -webkit-flex;
     margin-top: 5rem;
     background-image: url('../../images/diagnostica.jpg');
     height: 550px;
@@ -80,6 +81,7 @@ ul{
 
 .eng-seecon{
     display: flex;
+    display: -webkit-flex;
     align-items: flex-end;
 }
 
@@ -93,6 +95,8 @@ ul{
 
 .insp-container{
     display: flex;
+    display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
@@ -152,6 +156,7 @@ ul{
 #itens-container{
     padding: 0 1.5rem 0 1.5rem;
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: flex-start !important;
 }
@@ -164,6 +169,7 @@ ul{
 
 .vist-item{
     display: flex;
+    display: -webkit-flex;
     margin-bottom: 0.5rem;
     padding: 0;
     align-items: center;
@@ -200,6 +206,7 @@ ul{
     width:100%;
 	height: 500px;
     display:flex;
+    display: -webkit-flex;
 	justify-content: center;
 	align-items: center;
     background: linear-gradient(180deg, rgba(69, 90, 100, 0.3) 33.53%, rgba(220, 235, 240, 0.219) 84.66%);
@@ -258,6 +265,7 @@ ul{
 
 .equipament-list{
     display: flex;
+    display: -webkit-flex;
     margin-left: 3rem;
     margin-right: 3rem;
     margin-bottom: 2rem;
@@ -267,6 +275,7 @@ ul{
 
 .equipament-item{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -335,7 +344,9 @@ ul{
     margin-top: -1rem;
     margin-bottom: 2rem;
     display: flex;
+    display: -webkit-flex;
     flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -377,6 +388,7 @@ ul{
 
 .main-form-content{
     display: flex;
+    display: -webkit-flex;
 }
 
 .form{
@@ -414,6 +426,7 @@ ul{
 
 #button-form{
     display: flex;
+    display: -webkit-flex;
     align-items: center;
     justify-content: center;
 }
@@ -434,6 +447,7 @@ ul{
 
 .container-cliente{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     margin-left: 3rem;
     margin-top: 3rem;
@@ -462,6 +476,7 @@ ul{
 
 .clientes-cabecalho{
     display: flex;
+    display: -webkit-flex;
     margin-bottom: 1rem;
 }
 
@@ -522,6 +537,7 @@ ul{
 
 .container-form-info{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -590,6 +606,7 @@ ul{
 
     .main-form-content{
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -599,6 +616,7 @@ ul{
         zoom: 0.7;
         margin-top: 6rem;
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         align-items: center;
         height: 375px;
@@ -658,6 +676,7 @@ ul{
     .bg-content{
         margin-top: -3rem;
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         align-items: center;
         left: 0;
