--- a/styles/pages/estrutural.css
+++ b/styles/pages/estrutural.css
@@ -2,6 +2,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body {
+
+	overflow-x:hidden;
+}
+
 main{
     margin: 0 auto;
     padding: 0 auto;
@@ -13,6 +18,7 @@ main{
 
 .bg-main{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     margin-top: 5rem;
     background-image: url('../../images/estrutural.jpg');
@@ -103,6 +109,7 @@ main{
 
 .reforco-content{
     display: flex;
+    display: -webkit-flex;
     align-items: center;
 }
 
@@ -120,6 +127,7 @@ main{
 
 .img-diagnostica{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     align-items: center;
     padding: 0 auto;
@@ -132,6 +140,7 @@ main{
 
 .container-estrutural{
     display: flex;
+    display: -webkit-flex;
     justify-content: space-around;
     margin-top: 3rem;
     margin-bottom: 3rem;
@@ -152,11 +161,13 @@ main{
 
 .etapa-1{
     display: flex;
+    display: -webkit-flex;
     padding: 3rem 3rem 3rem 3rem;
 }
 
 .etapa-content{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 2rem;
@@ -171,6 +182,7 @@ main{
 
 .etapa-content2{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     margin-right: 2rem;
@@ -198,6 +210,7 @@ main{
 
 .orcamento{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     margin-top: 2rem;
 }
@@ -229,6 +242,7 @@ main{
 
 .numeros{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 2rem;
@@ -247,12 +261,14 @@ main{
 
 .numeros-content{
     display: flex;
+    display: -webkit-flex;
     justify-content: space-between;
     padding: 3rem;
 }
 
 .card-numeros{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -276,6 +292,7 @@ main{
 
 .container-projetos{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     margin-top: 3rem;
     margin-bottom: 1rem;
@@ -296,6 +313,7 @@ main{
 
 .valor{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -341,6 +359,7 @@ main{
 
 .seecon{
     display: flex;
+    display: -webkit-flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 3rem;
@@ -349,6 +368,7 @@ main{
 
 .content-seecon{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     align-items: center;
 }
@@ -361,6 +381,7 @@ main{
 
 .abece{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
 }
 
@@ -369,6 +390,7 @@ main{
 
 .container-cliente{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     margin-left: 3rem;
     margin-top: 3rem;
@@ -397,6 +419,7 @@ main{
 
 .clientes-cabecalho{
     display: flex;
+    display: -webkit-flex;
     margin-bottom: 1rem;
 }
 
@@ -504,6 +527,7 @@ main{
         zoom: 0.7;
         margin-top: 6rem;
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         align-items: center;
         height: 450px;
@@ -524,6 +548,7 @@ main{
     .bg-content{
         margin-top: -3rem;
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         align-items: center;
         left: 0;
@@ -546,6 +571,7 @@ main{
 
     .reforco-content{
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         align-items: center;
     }
@@ -659,6 +685,7 @@ main{
 
     .reforco-content{
         display: flex;
+        display: -webkit-flex;
         flex-direction: column;
         align-items: center;
     }
