--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -2,8 +2,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-body{
-    overflow-x: hidden;
+body {
+	overflow-x:hidden;
 }
 
 /*-------------Hero-----------*/
@@ -20,6 +20,7 @@ title{
     width: 100%;
     margin-top: 3.5rem;
     display: flex;
+    display: -webkit-flex;
     align-items: center;
 }
 
@@ -47,6 +48,7 @@ title{
 .infos-hero{
     height: max-content;
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: center;
 }
@@ -59,6 +61,7 @@ title{
 
 .main-home{
     display: flex;
+    display: -webkit-flex;
     justify-content: space-evenly;
     align-items: center;
     color: #455A64;
@@ -101,7 +104,31 @@ title{
     color: #455A64;
 }
 
+#slider{
+    position: relative;
+    width: 700px;
+    height: 500px;
+}
+
+#slider img{
+    opacity: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transition: opacity 800ms;
+}
+
+#slider img.selected{
+    opacity: 1;
+}
+
 /*-------------MEDIA QUERIES-----------*/
+
+@media (max-width: 360px)  {
+    #slider{
+        zoom: 0.55 !important;
+    }
+}
 
 /* X-Small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px)  {
@@ -127,15 +154,22 @@ title{
         top: 3rem;
     }
 
+    #slider{
+        zoom: 0.7;
+    }
+
     .main-home{
         zoom: 0.7;   
         display: flex;
+        display: -webkit-flex;
         justify-content: center;
         flex-direction: column;
         align-items: center ;
+
     }
 
     .main-list{
+        margin-top: 1rem;
         zoom: 0.85;
     }
 
