--- a/styles/pages/diagnostica.css
+++ b/styles/pages/diagnostica.css
@@ -103,7 +103,7 @@ ul{
 }
 
 .item-info{
-    padding: 1.5rem;
+    padding: 1.5rem 2rem;
     display: block;
     justify-content: center;
     text-align: center;
